[package]
name = "llvm-wrap"
version = "0.2.1"
authors = ["Scott Taylor <scott11x8@gmail.com>"]

description = "A safer wrapper for the LLVM C API bindings in Rust, based on llvm-sys"
keywords = ["llvm", "compile", "wrap", "c"]
license = "MIT"

include = ["src/**", "Cargo.toml"]

[dependencies]
llvm-sys = "50"